# BUAA_2021_Assembler_Linker

./: .gitignore  考试须知.md
guide/: exp_guide.md  说明.md
lib_for_linux/: README.txt
p7_source/: CMakeLists.txt  Makefile  assembler  assembler.c  combined.int  combined.out  linker  linker.c  main.out  main.s  my_utils.c  my_utils.h
p7_source/assembler-src/: assembler_utils.c  assembler_utils.h
p7_source/lib/: tables.c  tables.h  translate.c  translate.h
p7_source/linker-src/: linker_utils.c  linker_utils.h
p7_stu_exam_ans/: Makefile  my_assembler_utils.c  my_linker_utils.c  my_linker_utils.h
p7_stu_exam_ans/lib/: tables.h  translate.c  translate_utils.c
p7_stu_exam_ans/linker-src/: linker_utils.c  linker_utils.h
p7_student_ans/: CMakeLists.txt  Makefile  assembler  cmake_install.cmake  linker  linker.c  mips_opt.int  mips_opt.out  mips_opt.txt  my_assembler_utils.c  my_assembler_utils.h  my_linker_utils.c
p7_student_ans/assembler-src/: assembler_utils.c
p7_student_ans/lib/: tables.c  translate.c
p7_student_ans/linker-src/: linker_utils.c  linker_utils.h
ref/assembler_ref/input/: combined.s
test_data/assembler_data/2/: output.out
test_data/assembler_data/5/: output.out
test_data/assembler_data/6/: input.s
test_data/assembler_data/8/: input.s  output.int
test_data/assembler_data/9/: output.int
test_data/linker_data/2/: 01_input.out
test_data/linker_data/6/: 00_input.out  01_input.out
test_data_full/assembler_data/: assembler
test_data_full/linker_data/: linker
选做实验一代码/: my_assembler_utils.c  my_linker_utils.c
(+29 files in other folders)
